chore(sortKey): add sortKey to every contract evaluation endpoint, update swagger docs
